<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2AA5C"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ElectricityRecomendations">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0C0D0D"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/elect" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#FBF9F9"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Consejos de electricidad"
                android:textAlignment="center"
                android:textColor="#114B79"
                android:textSize="34sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/recommendation_electricity_1"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/recommendation_electricity_2"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/recommendation_electricity_3"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/recommendation_electricity_4"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btnBackRecommend"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#009688"
                android:text="Regresar" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>